--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="//unpkg.com/alpinejs" defer></script>
+    <link rel="stylesheet" href="src/css/style.css">
     <title>Document</title>
 </head>
 <body>
 <h1>Astronomie</h1>
 <div class="carrousel" x-data="{}">
-    <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant"><</button><button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant">></button>
-    <div class="carrousel_parent-ecrans">
+    <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant" @click="parent = $refs.parent; parent.scrollleft -= parent.clientWidth">
+        &lt;
+    </button>
+    <button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant" @click="parent = $refs.parent; parent.scrollleft += parent.clientWidth">
+        &gt;
+    </button>
+    <div class="carrousel_parent-ecrans" x-ref="parent">
         <div id="ecran-1" class="carrousel_ecran">
             <figure>
                 <img src="https://picsum.photos/seed/1/500/300" alt="image ecran 1">
