--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
 <h1>Astronomie</h1>
 <div class="carrousel" x-data="{}">
-    <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant" @click="parent = $refs.parent; parent.scrollleft -= parent.clientWidth">
+    <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant" @click="parent = $refs.parent; parent.scrollLeft -= parent.clientWidth">
         &lt;
     </button>
-    <button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant" @click="parent = $refs.parent; parent.scrollleft += parent.clientWidth">
+    <button class="carrousel_btn carrousel_btn-apres" aria-label="slide suivant" @click="parent = $refs.parent; parent.scrollLeft += parent.clientWidth">
         &gt;
     </button>
     <div class="carrousel_parent-ecrans" x-ref="parent">
