--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <h1>Astronomie</h1>
 <div class="carrousel" x-data="{
     hrefCourant: '#ecran-1',
+    hrefCourant: '#ecran-2',
+    hrefCourant: '#ecran-3',
+    hrefCourant: '#ecran-4',
+    hrefCourant: '#ecran-5',
 }">
     <button class="carrousel_btn carrousel_btn-avant" aria-label="slide précedant" @click="parent = $refs.parent; parent.scrollLeft -= parent.clientWidth">
         &lt;
@@ -33,7 +37,7 @@
         </div>
         <div id="ecran-2" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/2/500/300" alt="image ecran 2">
+                <img src="https://commons.wikimedia.org/wiki/File:Cartwheel_Galaxy_Makes_Waves.jpg?uselang=fr" alt="image ecran 2">
                 <figcaption>Ecran 2</figcaption>
             </figure>
         </div>
@@ -58,10 +62,10 @@
     </div>
     <ul class="caroussel_liste-liens">
         <li><a href="#ecran-1" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-1'}">ecran 1</a></li>
-        <li><a href="#ecran-2" class="caroussel_lien">ecran 2</a></li>
-        <li><a href="#ecran-3" class="caroussel_lien">ecran 3</a></li>
-        <li><a href="#ecran-4" class="caroussel_lien">ecran 4</a></li>
-        <li><a href="#ecran-5" class="caroussel_lien">ecran 5</a></li>
+        <li><a href="#ecran-2" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-2'}">ecran 2</a></li>
+        <li><a href="#ecran-3" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-3'}">ecran 3</a></li>
+        <li><a href="#ecran-4" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-4'}">ecran 4</a></li>
+        <li><a href="#ecran-5" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-5'}">ecran 5</a></li>
     </ul>
 </div>
 </body>
