changement des images

--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
                                          ">
         <div id="ecran-1" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/1/500/300" alt="image ecran 1">
-                <figcaption>Ecran 1</figcaption>
+                <img src="assets/img/Cartwheel_Galaxy_Makes_Waves.jpg" alt="image ecran 1">
+                <figcaption>Roue de Chariot</figcaption>
             </figure>
         </div>
         <div id="ecran-2" class="carrousel_ecran">
             <figure>
-                <img src="https://commons.wikimedia.org/wiki/File:Cartwheel_Galaxy_Makes_Waves.jpg?uselang=fr" alt="image ecran 2">
-                <figcaption>Ecran 2</figcaption>
+                <img src="assets/img/Hoag's_object.jpg" alt="image ecran 2">
+                <figcaption>Objet Hoag</figcaption>
             </figure>
         </div>
         <div id="ecran-3" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/3/500/300" alt="image ecran 3">
+                <img src="assets/img/M33HunterWilson09.jpg" alt="image ecran 3">
                 <figcaption>Ecran 3</figcaption>
             </figure>
         </div>
         <div id="ecran-4" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/4/500/300" alt="image ecran 4">
+                <img src="assets/img/M104_ngc4594_sombrero_galaxy_hi-res.jpg" alt="image ecran 4">
                 <figcaption>Ecran 4</figcaption>
             </figure>
         </div>
         <div id="ecran-5" class="carrousel_ecran">
             <figure>
-                <img src="https://picsum.photos/seed/5/500/300" alt="image ecran 5">
+                <img src="assets/img/NGC_5457_M101_SDSS2.jpg" alt="image ecran 5">
                 <figcaption>Ecran 5</figcaption>
             </figure>
         </div>
