ajout et changement de CSS

--- a/index.html
+++ b/index.html
@@ -32,37 +32,37 @@
         <div id="ecran-1" class="carrousel_ecran">
             <figure>
                 <img src="assets/img/Cartwheel_Galaxy_Makes_Waves.jpg" alt="image ecran 1">
-                <figcaption>Galaxie de la roue de Chariot</figcaption>
+                <figcaption class="caroussel_text">Galaxie de la roue de Chariot</figcaption>
             </figure>
         </div>
         <div id="ecran-2" class="carrousel_ecran">
             <figure>
                 <img src="assets/img/Hoag's_object.jpg" alt="image ecran 2">
-                <figcaption>Objet de Hoag</figcaption>
+                <figcaption class="caroussel_text">Objet de Hoag</figcaption>
             </figure>
         </div>
         <div id="ecran-3" class="carrousel_ecran">
             <figure>
                 <img src="assets/img/M33HunterWilson09.jpg" alt="image ecran 3">
-                <figcaption>Galaxie du Triange</figcaption>
+                <figcaption class="caroussel_text">Galaxie du Triange</figcaption>
             </figure>
         </div>
         <div id="ecran-4" class="carrousel_ecran">
             <figure>
                 <img src="assets/img/M104_ngc4594_sombrero_galaxy_hi-res.jpg" alt="image ecran 4">
-                <figcaption>Galaxie du sombrero</figcaption>
+                <figcaption class="caroussel_text">Galaxie du sombrero</figcaption>
             </figure>
         </div>
         <div id="ecran-5" class="carrousel_ecran">
             <figure>
                 <img src="assets/img/NGC_5457_M101_SDSS2.jpg" alt="image ecran 5">
-                <figcaption>Galaxie du Moulinet</figcaption>
+                <figcaption class="caroussel_text">Galaxie du Moulinet</figcaption>
             </figure>
         </div>
     </div>
     <ul class="caroussel_liste-liens">
-        <li><a href="#ecran-1" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-1'}">Roue du Chariot</a></li>
-        <li><a href="#ecran-2" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-2'}">Objet de Hoag</a></li>
+        <li><a href="#ecran-1" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-1'}">Chariot</a></li>
+        <li><a href="#ecran-2" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-2'}">Hoag</a></li>
         <li><a href="#ecran-3" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-3'}">Triangle</a></li>
         <li><a href="#ecran-4" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-4'}">Sombrero</a></li>
         <li><a href="#ecran-5" class="caroussel_lien" :class="{actif:hrefCourant==='#ecran-5'}">Moulinet</a></li>
